# Compilers-Project

./: .gitignore  Add: Link Frontend  CMakeLists.txt  README.md  compile.py  environment.h  exp.cpp  exp.h  main  main.cpp  make.py  parser.cpp  parser.h  run_tests.py  scanner.cpp  test1.txt  test2.txt  test3.txt  test4.txt  token.cpp  token.h  visitor.cpp  visitor.h
frontend/: .gitignore  app.py  requirements.txt  run.bat  setup.bat
test/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_01_declarations.txt  test_02_arithmetic.txt  test_03_strings.txt  test_04_relational_logical.txt  test_05_ranges.txt  test_06_control_structures.txt  test_07_run_blocks.txt  test_08_function_calls.txt  test_09_complex_expressions.txt  test_10_literals_misc.txt  test_mega_completo.txt
